kubernetes/aggregator-service/aggregator-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aggregator-service
  labels:
    app: aggregator-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aggregator-service
  template:
    metadata:
      labels:
        app: aggregator-service
    spec:
      containers:
        - name: aggregator-service
          image: 'aggregator-service:dev'
          ports:
            - name: http
              containerPort: 5000
