kubernetes/aggregator-service/aggregator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-service
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: aggregator-service
